grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress-service
  namespace: grafana-app
  labels:
    name: grafana-ingress-service
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.techrite.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grafana
            port: 
              number: 80
